--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,7 @@
 <footer class="footer flex-row footer-links space-between align-items-center">
   <app-button routerLink="contact" color="accent" label="Kontakt"></app-button>
   <app-button routerLink="imprint" color="accent" label="Impressum"></app-button>
+  <div class="copyright">
+    <span>Copyright: 1997 - 2022</span>
+  </div>
 </footer>
